--- a/src/pages/customersDetails/customersDetails.html
+++ b/src/pages/customersDetails/customersDetails.html
@@ -38,7 +38,7 @@
     </ion-item>
   </ion-list>
   <ion-row>
-    <ion-label padding-left>Orders</ion-label>
+    <ion-label class="item-md">Orders</ion-label>
     <ion-buttons end>
       <button ion-button icon-only clear large (click)="addOrders()">
         <ion-icon md="md-add-circle"></ion-icon>
