--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -23,7 +23,7 @@
           <ion-list>
             <ion-item class="login-item">
               <ion-label floating style="font-size: 18px">Username</ion-label>
-              <ion-input type="text" name="username" [(ngModel)]="txtUsername" required></ion-input>
+              <ion-input type="search" name="username" [(ngModel)]="txtUsername" required></ion-input>
             </ion-item>          
             <ion-item class="login-item">
               <ion-label floating style="font-size: 18px">Password</ion-label>
