--- a/src/pages/customer-list/customer.html
+++ b/src/pages/customer-list/customer.html
@@ -1,7 +1,27 @@
 <ion-header>
     <ion-navbar color="primary">
-        <ion-title>Customer</ion-title>
+        <button *ngIf="!toggled" ion-button icon-only menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <!-- Title -->
+        <ion-title *ngIf="!toggled">Customers</ion-title>
+        <!-- Search Bar -->
+        <ion-searchbar *ngIf="toggled" [(ngModel)]="searchTerm" [showCancelButton]="false" (ionCancel)="searchCancel()" (ionInput)="triggerInput($event)"></ion-searchbar>
+        <!--Search Cancel Icon-->
+        <ion-buttons end *ngIf="toggled">
+            <button ion-button icon-only (click)="searchCancel()">
+                <ion-icon name="close-circle"></ion-icon>
+            </button>
+        </ion-buttons>
+        <!-- Search Icon -->
+        <ion-buttons end *ngIf="!toggled">
+            <button ion-button icon-only (click)="toggleSearch()">
+                <ion-icon name="search"></ion-icon>
+            </button>
+        </ion-buttons>
+        <!-- <ion-title>Customer</ion-title> -->
     </ion-navbar>
+
     <ion-toolbar no-border-top>
         <ion-segment [(ngModel)]="gender">
             <ion-segment-button value="Male">
