remove gender segment and add gender images

--- a/src/pages/customer-list/customer.html
+++ b/src/pages/customer-list/customer.html
@@ -22,7 +22,7 @@
         <!-- <ion-title>Customer</ion-title> -->
     </ion-navbar>
 
-    <ion-toolbar no-border-top>
+    <!-- <ion-toolbar no-border-top>
         <ion-segment [(ngModel)]="gender">
             <ion-segment-button value="Male">
                 Male
@@ -31,19 +31,28 @@
                 Female
             </ion-segment-button>
         </ion-segment>
-    </ion-toolbar>
+    </ion-toolbar> -->
 </ion-header>
 
 
 <ion-content>
-    <div [ngSwitch]="gender">
-        <ion-list no-lines *ngSwitchCase="'Male'">
-            <ion-item *ngFor="let customer of MaleCustomers" (click)="itemTapped($event, customer)">
+    <!-- <div [ngSwitch]="gender"> -->
+        <ion-list no-lines >
+            <ion-item *ngFor="let customer of customers" (click)="itemTapped($event, customer)">
                 <div class="Customer-Card">
                     <div class="content-div">
-                        <ion-row>Gender: {{customer.Gender}}</ion-row>
-                        <ion-row>Age: {{customer.Age}}</ion-row>
-                        <ion-row>Phone: {{customer.Phone}}</ion-row>
+                        <ion-grid>
+                            <ion-row>
+                                <ion-col col-10>
+                                    <ion-row>Gender: {{customer.Gender}}</ion-row>
+                                    <ion-row>Age: {{customer.Age}}</ion-row>
+                                    <ion-row>Phone: {{customer.Phone}}</ion-row>
+                                </ion-col>
+                                <ion-col col-2>
+                                    <img src="{{customer.Gender | genderToimage}}" />
+                                </ion-col>
+                            </ion-row>
+                        </ion-grid>
                     </div>
                     <div class="Name-div">
                         {{customer.Name}}
@@ -51,13 +60,22 @@
                 </div>
             </ion-item>
         </ion-list>
-        <ion-list no-lines *ngSwitchCase="'Female'">
+        <!-- <ion-list no-lines *ngSwitchCase="'Female'">
             <ion-item *ngFor="let customer of FemaleCustomers" (click)="itemTapped($event, customer)">
                 <div class="Customer-Card">
                     <div class="content-div">
-                        <ion-row>Gender: {{customer.Gender}}</ion-row>
-                        <ion-row>Age: {{customer.Age}}</ion-row>
-                        <ion-row>Phone: {{customer.Phone}}</ion-row>
+                        <ion-grid>
+                            <ion-row>
+                                <ion-col col-10>
+                                    <ion-row>Gender: {{customer.Gender}}</ion-row>
+                                    <ion-row>Age: {{customer.Age}}</ion-row>
+                                    <ion-row>Phone: {{customer.Phone}}</ion-row>
+                                </ion-col>
+                                <ion-col col-2>
+                                    <img src="{{customer.Gender | genderToimage}}" />
+                                </ion-col>
+                            </ion-row>
+                        </ion-grid>
                     </div>
                     <div class="Name-div">
                         {{customer.Name}}
@@ -65,5 +83,5 @@
                 </div>
             </ion-item>
         </ion-list>
-    </div>
+    </div> -->
 </ion-content>
