--- a/src/pages/measurementType/measurementType.html
+++ b/src/pages/measurementType/measurementType.html
@@ -3,6 +3,11 @@
         <ion-title>
             Measurement Type
         </ion-title>
+        <ion-buttons end>
+            <button ion-button icon-only menuToggle="right" show end>
+                <ion-icon name="menu"></ion-icon>
+            </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
 
