--- a/src/pages/add-customer/add-customer.html
+++ b/src/pages/add-customer/add-customer.html
@@ -8,11 +8,16 @@
   <ion-navbar color="primary">
     <ion-title>Add Customer</ion-title>
     <ion-buttons *ngIf="closeVisible" end>
-        <button ion-button (click)="dismiss()">
-          <span ion-text color="primary" showWhen="ios">Cancel</span>
-          <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
-        </button>
-      </ion-buttons>
+      <button ion-button (click)="dismiss()">
+        <span ion-text color="primary" showWhen="ios">Cancel</span>
+        <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-buttons *ngIf="!closeVisible" end>
+      <button ion-button menuToggle show end>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
