--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -3,6 +3,12 @@
         <button ion-button menuToggle="right" end>
             <ion-icon name="menu"></ion-icon>
         </button>
+        <ion-buttons end>
+            <button ion-button (click)="popover_Click($event)">
+              <span ion-text color="primary" showWhen="ios">Cancel</span>
+              <ion-icon name="md-contact" showWhen="android,windows"></ion-icon>
+            </button>
+          </ion-buttons>
         <ion-title>
             Dashboard
         </ion-title>
