completed auto login and created profile page

--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -20,10 +20,12 @@
         <ion-item text-center>
             <!-- <ion-label>No of Customer: {{Total}}</ion-label> -->
             <ion-row>
-                <ion-col col-6 align-self-center>
-                    <img src="assets/MaleFemale.png">
+                <ion-col col-3 align-self-center>
+                    <!-- <img src="assets/MaleFemale.png"> -->
+                    <img class="profile-img" src="assets/Male.png">
+                    <img class="profile-img" src="assets/Female.png">
                 </ion-col>
-                <ion-col col-6 align-self-center>
+                <ion-col col-9 align-self-center>
                     <span count-text>{{Total}}</span>
                 </ion-col>
             </ion-row>
@@ -33,7 +35,7 @@
                 <ion-col>
                     <ion-row>
                         <ion-col align-self-center>
-                            <img src="assets/Male.png">
+                            <img class="profile-img" src="assets/Male.png">
                         </ion-col>
                         <ion-col align-self-center>
                             <span count-text>{{Male}}</span>
@@ -43,7 +45,7 @@
                 <ion-col>
                     <ion-row>
                         <ion-col align-self-center>
-                            <img src="assets/Female.png">
+                            <img class="profile-img" src="assets/Female.png">
                         </ion-col>
                         <ion-col align-self-center>
                             <span count-text>{{Female}}</span>
