--- a/src/pages/userRegistration/userRegistration.html
+++ b/src/pages/userRegistration/userRegistration.html
@@ -30,7 +30,7 @@
       </ion-item>
       <ion-item class="login-item">
         <ion-label floating style="font-size: 18px">Email</ion-label>
-        <ion-input type="email" name="phone" [(ngModel)]="txtEmail" disabled="{{!isUserNotExists}}" required></ion-input>
+        <ion-input type="email" name="email" [(ngModel)]="txtEmail" disabled="{{!isUserNotExists}}" required></ion-input>
       </ion-item>
       <ion-item class="login-item">
         <ion-label floating style="font-size: 18px">Birthday</ion-label>
