--- a/src/pages/user/forgotPassword/forgotPassword.html
+++ b/src/pages/user/forgotPassword/forgotPassword.html
@@ -6,7 +6,7 @@
 
 <ion-content>
     <ion-list inset>
-        <ion-item class="login-item">
+        <ion-item class="login-item" *ngIf="isUsernameVisible">
             <ion-label floating style="font-size: 18px">Username</ion-label>
             <ion-input type="text" name="username" [(ngModel)]="txtUsername"></ion-input>
         </ion-item>
